# simpleton-computer

./: .gitignore  PROGRESS.md  QUICKSTART.md  READINGS.md  README.md  TEST_RESULTS.md  TYPECORE.md  app.py  demo.py  llm_integration.py  main.py  orchestration.py  package.json  profile_output.prof  pyproject.toml  run_tests.py  sample.md  sample_with_comments.md  test.txt  test_connection.py  test_type_system.py
backend/: README.md  server.py
backend/static/: app.js  index.html  style.css
core/: actions.py  engine.py  helpers.py  plan.py  runtime.py  sandbox.py  types.py
core/learning/: ROWPOLY.md  hw.py  hw2.py
core/spec/: type_system.md
core/typesys/: effects.py  kinds.py  rows.py  subtype.py  types.py
docs/: ARCHITECTURE.md  READINGS.md  TYPECORE.md
examples/: README.md  comments_demo.py  demo.py  mixed_demo.py  sample.txt  sample2.txt  sample_mixed_content.txt  tasks_demo.py
fileio/: __init__.py  files.py
tests/: README.md  __init__.py  conftest.py  test_effects_advanced.py  test_effects_basic.py  test_rows_basic.py  test_rows_collection.py  test_runtime.py  test_types_basic.py  test_types_containers.py  test_types_unification.py
