[project]
name = "simpleton-computer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "networkx>=3.5",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
