[project]
name = "simpleton-computer"
version = "0.1.0"
description = "A type-directed computing environment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "networkx>=3.5",
    "pydantic>=2.11.7",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "fileio"]